Disable sendmail which causes failure on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ before_script:
   - drush make build-dantechdk.make ../dantechdk.com
   - cd ../dantechdk.com
   - sudo chmod -R 777 sites/
+  
+  # Disable sendmail
+  - echo sendmail_path=`which true` >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  
+  # Install site
   - drush si dantechdk --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=VIH@2012 --site-mail=admin@example.com --site-name="dantechdk.com" --yes
   - drush cc all --yes
 
