--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,29 @@
 language: php
+sudo: false
 
 php:
   - 5.6
-  - 5.7
 
 mysql:
   database: drupal
   username: root
   encoding: utf8
 
+# Cache Composer & Drush directories.
+cache:
+  directories:
+    - $HOME/.composer/cache
+    - $HOME/.drush/cache
+
 before_script:
   - "mysql -e 'create database drupal;'"
-  - pear channel-discover pear.drush.org
-  - pear install drush/drush
-  - phpenv rehash
+  
+  # Install latest Drush 6.
+  - travis_retry composer self-update && composer --version
+  - travis_retry composer global require "drush/drush:6.*"
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  
+  # Build site.
   - drush make build-dantechdk.make ../dantechdk.com
   - cd ../dantechdk.com
   - sudo chmod -R 777 sites/
