Added patch for Enterprise Rotator (#3)
* Added patch for Enterprise Rotator
* Make dev-builds possible

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   
   # Build site.
-  - drush make build-dantechdk.make ../dantechdk.com
+  - drush make build-dantechdk-dev.make ../dantechdk.com
   - cd ../dantechdk.com
-  - sudo chmod -R 777 sites/
+  - chmod -R 777 sites/
   
   # Disable sendmail
   - echo sendmail_path=`which true` >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
