--- a/.travis.yml
+++ b/.travis.yml
@@ -17,20 +17,20 @@ cache:
 
 before_script:
   - "mysql -e 'create database drupal;'"
-  
+
   # Install latest Drush 6.
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "drush/drush:6.*"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
-  
+
   # Build site.
   - drush make build-dantechdk-dev.make ../dantechdk.com
   - cd ../dantechdk.com
   - chmod -R 777 sites/
-  
+
   # Disable sendmail
   - echo sendmail_path=`which true` >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-  
+
   # Install site
   - drush si minimal --db-url=mysql://root:@127.0.0.1/drupal --account-name=admin --account-pass=VIH@2012 --site-mail=admin@example.com --site-name="dantechdk.com" --yes
   - drush en dantech_deploy -y
@@ -39,3 +39,4 @@ before_script:
 script:
   - test -d sites/all/modules/dantechdk
   - test -d sites/all/modules/contrib
+  - ./scripts/check-overridden.sh
